# YoutubeDecipher

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  build.py  conanfile.py  conanfile.txt
.travis/: install.sh
cmake/: YoutubeDecipher-config.cmake  tools.cmake
include/YoutubeDecipher/: decipher.h
include/utils/networking/: networking.h
include/youtube/: decipher.h
package/: CMakeLists.txt
package/cmake/: YoutubeDecipher-config.cmake
package/src/youtube/: decipher.cpp
src/: CMakeLists.txt
src/cmake/: tools.cmake
src/networking/: networking.cpp
src/utils/networking/: networking.cpp
src/youtube/: decipher.cpp
test_package/: CMakeLists.txt  conanfile.py  test.cpp
